@startuml
skinparam classAttributeIconSize 0

interface Valuable {
  + get_label(): string
  + get_value(): number
  + get_volume(): number
}
enum Coin {
  M10
  M25
  M50
  M100
}
class Item {
  + label: string
  + value: number
  + volume: number
}
class Pig {
  - max_volume: number
  - broken: boolean
  - valuables: Array<Valuable>
  + add(valuable: Valuable): void
  + break_pig(): void
  + extract_coins(): Array<Coin>
  + extract_items(): Array<Item>
}
Valuable <|.. Coin
Valuable <|.. Item
Pig "1" o-- "0..*" Valuable
@enduml
